scenarios/chained-virtual-services/app1-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1
spec:
  hosts:
    - "app1.chaosmania.example.com"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: frontend-app1
