scenarios/chained-virtual-services/app2-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app2
spec:
  hosts:
    - "app2.chaosmania.example.com"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: frontend-app2
